objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Default Sales Process</fullName>
        <description>Sales process for default</description>
        <isActive>true</isActive>
        <values>
            <fullName>Capabilities Presentation %2F Demo</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contracting</fullName>
        </values>
        <values>
            <fullName>Proposal Requested</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Renewal</fullName>
        </values>
        <values>
            <fullName>Sales Plan</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal Sales Process</fullName>
        <description>Sales process for renewal.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Renewal</fullName>
        </values>
        <values>
            <fullName>Sales Plan</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Amount_of_Proposal__c</fullName>
        <description>Amount of the proposal</description>
        <label>Amount of Proposal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Product_Sales__c</fullName>
        <label>Annual Product Sales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;$1B</fullName>
                </value>
                <value>
                    <fullName>$500M-$1B</fullName>
                </value>
                <value>
                    <fullName>$100M-$500M</fullName>
                </value>
                <value>
                    <fullName>&lt; $100M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <description>Condition of the current content asset</description>
        <label>DOC Data Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>High Renovation</fullName>
                </value>
                <value>
                    <fullName>Low Renovation</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autogenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if the opportunity has been autogenerated as a renewal.</description>
        <label>Autogenerated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatic_Calculation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Automatic Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bob_Approved_Written_Proposal_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bob Approved Written Proposal/Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bob_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bob Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bob_Scott_Approved_Final_Contract_SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bob or Scott Approved Final Contract/SOW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_Type__c</fullName>
        <label>Buyer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Innovator</fullName>
                </value>
                <value>
                    <fullName>Early Adopter</fullName>
                </value>
                <value>
                    <fullName>Early Majority</fullName>
                </value>
                <value>
                    <fullName>Late Majority</fullName>
                </value>
                <value>
                    <fullName>Laggard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPG_Provider__c</fullName>
        <label>CPG/ Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPG</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Contact_Name__c</fullName>
        <label>Client Contact Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Critical_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Critical Project?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Department__c</fullName>
        <label>Client Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Solutions_Rep__c</fullName>
        <description>The Client Solutions rep assigned to this opportunity</description>
        <label>Client Solutions Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ash Srivastava</fullName>
                </value>
                <value>
                    <fullName>Emily Scrivens</fullName>
                </value>
                <value>
                    <fullName>Jacqui Kostelec</fullName>
                </value>
                <value>
                    <fullName>Katia Butylkova</fullName>
                </value>
                <value>
                    <fullName>Michiel de Bruin</fullName>
                </value>
                <value>
                    <fullName>Toby Sayre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Drugs_in_Same_Class__c</fullName>
        <label>Competitor Drugs in Same Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confidence_Level__c</fullName>
        <label>Confidence Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_for_Demo__c</fullName>
        <description>The contact that we presented the demo to</description>
        <label>Contact for Demo</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Execution_Date__c</fullName>
        <label>Contract Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Execution__c</fullName>
        <label>Contract Execution Date Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <defaultValue>"ABB-YYYYMM-TOPIC"</defaultValue>
        <inlineHelpText>To be entered by Ops Dept. [CLIENT CODE]-[YEAR][MONTH]-[TOPIC CODE]</inlineHelpText>
        <label>Contract ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_sign_del__c</fullName>
        <inlineHelpText>For ops use only :)</inlineHelpText>
        <label>Contracting Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Critical_Completion_Date__c</fullName>
        <label>Critical Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Future_Outreach__c</fullName>
        <label>Current/ Future Outreach</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Future</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOC_Data_Configuration__c</fullName>
        <label>DOC Data Configuration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOC_Data_Licensing__c</fullName>
        <label>DOC Data Licensing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOC_Library_Configuration__c</fullName>
        <label>DOC Library Configuration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOC_Library_Licensing__c</fullName>
        <label>DOC Library Licensing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOC_Timely_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOC Timely Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Proposal_Sent__c</fullName>
        <label>Proposal Sent Date: #1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Date__c</fullName>
        <description>Date of the Demo</description>
        <label>Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Epidemiology</fullName>
                </value>
                <value>
                    <fullName>HEOR</fullName>
                </value>
                <value>
                    <fullName>Brand/Product</fullName>
                </value>
                <value>
                    <fullName>Managed Markets</fullName>
                </value>
                <value>
                    <fullName>Med Affairs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Competitor_Product__c</fullName>
        <description>Separate multiple 'Competitor, Product' with ;</description>
        <inlineHelpText>Separate multiple 'Competitor, Product' with ;</inlineHelpText>
        <label>Direct Competitor, Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disease_State__c</fullName>
        <label>Disease State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Abdominal Aortic Aneurysm</fullName>
                </value>
                <value>
                    <fullName>Age-Related Macular Degeneration</fullName>
                </value>
                <value>
                    <fullName>Anesthesia</fullName>
                </value>
                <value>
                    <fullName>Aortic Valve Regurgitation/Stenosis</fullName>
                </value>
                <value>
                    <fullName>Asthma</fullName>
                </value>
                <value>
                    <fullName>Bradycardia</fullName>
                </value>
                <value>
                    <fullName>Cancer</fullName>
                </value>
                <value>
                    <fullName>Chronic Lymphocytic Leukemia</fullName>
                </value>
                <value>
                    <fullName>COPD</fullName>
                </value>
                <value>
                    <fullName>Coronary Artery Disease</fullName>
                </value>
                <value>
                    <fullName>Cystic Fibrosis</fullName>
                </value>
                <value>
                    <fullName>Diabetes Type 1 &amp; 2</fullName>
                </value>
                <value>
                    <fullName>Diabetes Type 2</fullName>
                </value>
                <value>
                    <fullName>Diabetic Macular Edema</fullName>
                </value>
                <value>
                    <fullName>Dyslipidemia</fullName>
                </value>
                <value>
                    <fullName>Endometriosis</fullName>
                </value>
                <value>
                    <fullName>Gastric Cancer</fullName>
                </value>
                <value>
                    <fullName>Heart Failure</fullName>
                </value>
                <value>
                    <fullName>Hepatitis C</fullName>
                </value>
                <value>
                    <fullName>HIV-1</fullName>
                </value>
                <value>
                    <fullName>Hypertension</fullName>
                </value>
                <value>
                    <fullName>Hypogonadism</fullName>
                </value>
                <value>
                    <fullName>Lung Cancer</fullName>
                </value>
                <value>
                    <fullName>Malignant Pleural Effusion</fullName>
                </value>
                <value>
                    <fullName>Melanoma</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Mixed Cancers</fullName>
                </value>
                <value>
                    <fullName>Mixed Cardiac Diseases</fullName>
                </value>
                <value>
                    <fullName>Mixed Immunology</fullName>
                </value>
                <value>
                    <fullName>Mixed Neurology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doc_Library_Asset_Type__c</fullName>
        <label>DOC Library Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>High Renovation</fullName>
                </value>
                <value>
                    <fullName>Low Renovation</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drug_Class__c</fullName>
        <label>Drug Class</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Early_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Early Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Type__c</fullName>
        <label>Engagement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Early Prospecting</fullName>
                </value>
                <value>
                    <fullName>Engagement Pending</fullName>
                </value>
                <value>
                    <fullName>Verbal Discussions</fullName>
                </value>
                <value>
                    <fullName>Written Proposal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_Level__c</fullName>
        <inlineHelpText>Admin only setting</inlineHelpText>
        <label>Forecast Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Confidence</fullName>
                </value>
                <value>
                    <fullName>Very High Confidence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hae_Approved_Written_Proposal_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hae Approved Written Proposal/Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hae_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hae Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Managerial sales opportunity forecast override.</description>
        <label>In Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <label>Indication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Demo__c</fullName>
        <label>Last Demo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Management_Notes__c</fullName>
        <description>For management use to reflect any important variance changes</description>
        <label>Notes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box if this is a Marketing Proposal</description>
        <label>Marketing Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Agreement_Date__c</fullName>
        <description>Commencement date</description>
        <label>Master Agreement: Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_Agreement_Expiration_Date__c</fullName>
        <description>Expiration date of Master Agreement</description>
        <label>Master Agreement: Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Med_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Med Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mika_Approved_Client_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mika Approved Client Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mika_Approved_Closed_Won_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mika Approved Closed Won Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mika_Approved_Customer_Verbal_Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mika Approved Customer Verbal Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mika_Approved_Negotiating_Contract_SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mika Approved Negotiating Contract/SOW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mika_Approved_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mika Approved RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mika_Approved_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mika Approved Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mika_Approved_Verbal_Proposal_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mika Approved Verbal Proposal/Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mika_Approved_Written_Proposal_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mika Approved Written Proposal/Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <displayFormat>SF{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Opportunity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Original_Amount__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Close_Date__c</fullName>
        <label>Original Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Override_Allocations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Allocations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Date__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boston Healthcare</fullName>
                </value>
                <value>
                    <fullName>Analytica</fullName>
                </value>
                <value>
                    <fullName>Peleton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pharmacovigilance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pharmacovigilance/ Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <label>Plan Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Offering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Hub</fullName>
                    <default>true</default>
                    <label>Data Hub</label>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>DOC Label</fullName>
                </value>
                <value>
                    <fullName>DOC Track</fullName>
                </value>
                <value>
                    <fullName>GROWTH</fullName>
                </value>
                <value>
                    <fullName>IHME</fullName>
                </value>
                <value>
                    <fullName>ASCO DOC Search</fullName>
                </value>
                <value>
                    <fullName>Service Project Platform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Generic_Name__c</fullName>
        <label>Product Generic Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Market</fullName>
                </value>
                <value>
                    <fullName>Launch</fullName>
                </value>
                <value>
                    <fullName>Launch (or pre), Equivalent</fullName>
                    <isActive>false</isActive>
                    <label>Launch (or pre), Equivalent</label>
                </value>
                <value>
                    <fullName>On Market, Equivalent</fullName>
                    <isActive>false</isActive>
                    <label>On Market, Equivalent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Professional Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Ask_Date__c</fullName>
        <label>Proposal Ask Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Client_Submission_A7__c</fullName>
        <label>Proposal Client Submission (A7)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Date_Sent_3__c</fullName>
        <label>Proposal Sent Date: #3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Delivery_Date__c</fullName>
        <label>Proposal Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Due_Date__c</fullName>
        <label>Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Final_Adjustments_A8__c</fullName>
        <label>Proposal Final Adjustments (A8)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Final_Draft_A9__c</fullName>
        <label>Proposal Final Draft (A9)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Final_Draft_Date__c</fullName>
        <label>Proposal Final Draft Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Final_Draft_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Final Draft Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Initial_Meeting_A1__c</fullName>
        <label>Proposal Initial Meeting (A1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Initial_Offer_A5__c</fullName>
        <label>Proposal Initial Offer (A5)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Internal_Approval_A6__c</fullName>
        <label>Proposal Internal Approval (A6)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Link__c</fullName>
        <label>Proposal Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Proposal_Notes__c</fullName>
        <label>Proposal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Proposal_Outline_Confirmation_A3__c</fullName>
        <label>Proposal Outline Confirmation (A3)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Outline_Draft_A2__c</fullName>
        <label>Proposal Outline Draft (A2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Owner__c</fullName>
        <label>Proposal Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ash Srivastava</fullName>
                </value>
                <value>
                    <fullName>Ben Taylor</fullName>
                </value>
                <value>
                    <fullName>Egbe Ubamadu</fullName>
                </value>
                <value>
                    <fullName>Erin Murray</fullName>
                </value>
                <value>
                    <fullName>Fasahath Husain</fullName>
                </value>
                <value>
                    <fullName>Mir Fazeli</fullName>
                    <default>true</default>
                    <label>Mir Fazeli</label>
                </value>
                <value>
                    <fullName>Rebecca Diekemper</fullName>
                </value>
                <value>
                    <fullName>Roshan Shah</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Request_Date__c</fullName>
        <label>Proposal Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Sent_Date_2__c</fullName>
        <label>Proposal Sent Date: #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Sent_Date__c</fullName>
        <description>Date the proposal was sent</description>
        <label>Proposal Sent Date #1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Technical_Draft_A4__c</fullName>
        <label>Proposal Technical Draft (A4)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regulatory_Affairs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regulatory Affairs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Amount__c</fullName>
        <label>Renewal Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOW_Contract__c</fullName>
        <label>SOW/Contract #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Plan_Amount__c</fullName>
        <label>Sales Plan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Plan_Close_Date__c</fullName>
        <label>Sales Plan Close Date</label>
        <type>Date</type>
    </fields>
</CustomObject>